RESOLVED FIXED110342
[BlackBerry] Fix usage of HitTestRequest::RequestType
https://bugs.webkit.org/show_bug.cgi?id=110342
Summary [BlackBerry] Fix usage of HitTestRequest::RequestType
Alberto Garcia
Reported 2013-02-20 06:42:38 PST
The namespace is HitTestRequest, not HitTestResult. This was introduced by mistake in r142977.
Attachments
Patch (1.55 KB, patch)
2013-02-20 06:43 PST, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-02-20 06:43:56 PST
WebKit Review Bot
Comment 2 2013-02-20 07:06:34 PST
Comment on attachment 189309 [details] Patch Clearing flags on attachment: 189309 Committed r143460: <http://trac.webkit.org/changeset/143460>
WebKit Review Bot
Comment 3 2013-02-20 07:06:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.