[BlackBerry] Fix usage of HitTestRequest::RequestType https://bugs.webkit.org/show_bug.cgi?id=110342

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-02-20
Reviewed by Carlos Garcia Campos.

Rename HitTestResult::* -> HitTestRequest::*
This was introduced by mistake in r142977.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::hitTestResult):

Canonical link: https://commits.webkit.org/128640@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143460 268f45cc-cd09-0410-ab3c-d52691b4dbfc